@@ -18,6 +18,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
+        <junit-platform.version>1.10.2</junit-platform.version>
         <maven.compiler.release>17</maven.compiler.release>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -80,6 +82,13 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-parent</artifactId>
+            <version>1.15.8</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -105,7 +114,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -160,25 +169,43 @@
                     <dependency>
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-junit5-plugin</artifactId>
-                        <version>1.2.1</version>
+                        <version>1.2.2</version>
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <avoidCallsTo>
+                        <avoidCallsTo>java.io.PrintStream</avoidCallsTo>
+                        <avoidCallsTo>System.out.println</avoidCallsTo>
+                        <avoidCallsTo>System.err.println</avoidCallsTo>
+                    </avoidCallsTo>
+                    <excludedMethods>
+                        <param>printarListaDeClientes</param>
+                        <param>visualizarContas</param>
+                        <param>visualizarDetalhesDoCliente</param>
+                    </excludedMethods>
                     <targetClasses>
-                        <param>br.winxbank.sistemabancario.Banco</param>
+                        <param>br.winxbank.*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>br.winxbank.sistemabancario.BancoTest</param>
-                        <param>br.winxbank.sistemabancario.integracao.BancoIntegrationTest</param>
-                        <param>br.winxbank.web.BancoSystemE2ETest</param>
+                        <param>br.winxbank.*</param>
                     </targetTests>
-                    <mutationThreshold>80</mutationThreshold>
+                    <mutationThreshold>55</mutationThreshold>
                     <outputFormats>
                         <param>HTML</param>
                         <param>XML</param>
                     </outputFormats>
+                    <jvmArgs>
+                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.text=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.net=ALL-UNNAMED</jvmArg>
+                    </jvmArgs>
+                    <timeoutConstant>5000</timeoutConstant>
+                    <timeoutFactor>1.25</timeoutFactor>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
